--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
-
+ul{
+  text-align: left;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
