--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,22 @@ input[type=text]:focus {
 img{
   width:30px;
 }
+.row{
+  justify-content: center;
+}
+.search{
+  text-align: left !important;
+  margin: 10px;
+}
+input.search-text{
+margin-top:5px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+}
+input, button{
+  margin-top:10px;
 }
 ul{
   text-align: left;
